Re #2: remove form-control:focus and just target form-control to fix the small jump when you click inside the form

--- a/assets/css/shoutrageous.css
+++ b/assets/css/shoutrageous.css
@@ -130,9 +130,10 @@ a:hover {
   color: #70ac23;
 }
 
-.form-control:focus {
+.form-control {
   border: none;
   box-shadow: none;
+  color: #70ac23;
 }
 
 .btn-signup {
